str-app-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
  - port: 80
    targetPort: str-app-port
    protocol: TCP
  selector: 
       app: str-app
  type: LoadBalancer
