str-app-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
  - port: 8090
    nodePort: 30001
    targetPort: str-app-port
    protocol: TCP
  selector: 
       app: str-app
  type: NodePort
